feat: domain list endpoint
