# docs/swagger.json
@@ -394,8 +394,8 @@
             }
         },
         "/domain/:cloud_provider": {
-            "get": {
-                "description": "Return a configured Kubefirst cluster",
+            "post": {
+                "description": "Return a list of registered domains/hosted zones for a cloud provider account",
                 "consumes": [
                     "application/json"
                 ],
@@ -405,21 +405,23 @@
                 "tags": [
                     "domain"
                 ],
-                "summary": "Return a configured Kubefirst cluster",
+                "summary": "Return a list of registered domains/hosted zones for a cloud provider account",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "The cloud provider to return registered domains/zones from",
-                        "name": "cloud_provider",
-                        "in": "path",
-                        "required": true
+                        "description": "Domain list request in JSON format",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/types.DomainListRequest"
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/types.Cluster"
+                            "$ref": "#/definitions/types.DomainListResponse"
                         }
                     },
                     "400": {
@@ -780,6 +782,37 @@
                 },
                 "token": {
                     "type": "string"
+                }
+            }
+        },
+        "types.DomainListRequest": {
+            "type": "object",
+            "properties": {
+                "aws_auth": {
+                    "$ref": "#/definitions/types.AWSAuth"
+                },
+                "civo_auth": {
+                    "$ref": "#/definitions/types.CivoAuth"
+                },
+                "cloud_region": {
+                    "type": "string"
+                },
+                "do_auth": {
+                    "$ref": "#/definitions/types.DigitaloceanAuth"
+                },
+                "vultr_auth": {
+                    "$ref": "#/definitions/types.VultrAuth"
+                }
+            }
+        },
+        "types.DomainListResponse": {
+            "type": "object",
+            "properties": {
+                "domains": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
